--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
    <main id="main">
 
      <title id="title">Dr. Norman Borlaug</title>
+     <div id="img-div">
+       <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" id= "image">
+     </div>
 
    </main>
  
