--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
      <title id="title">Dr. Norman Borlaug</title>
      <div id="img-div">
        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" id= "image">
-     </div>
 
+       <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger</figcaption>
+      </div>
+
+      <div id="tribute-info">Here's a time line of Dr. Borlaug's life:</div>
+      
+     <a href="#" target="_blank" id="tribute-link"></a>
    </main>
  
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
